--- a/app/application/admin/views/scripts/product/edit.phtml
+++ b/app/application/admin/views/scripts/product/edit.phtml
@@ -45,7 +45,7 @@
 
 
 <script type='text/template' id='graphic-template'>
-	<div class='product-image'><img src='http://storage.aliyun.com/public-misc/{{ window.SITE_FOLDER }}/_thumb/{{ urlname }}'></div>
+	<div class='product-image'><img src='http://misc.fucms.com/public-misc/{{ window.SITE_FOLDER }}/_thumb/{{ urlname }}'></div>
 	<div class='product-name'>{{ filename }}</div>
 	<div class='set-introicon' urlname='{{ urlname }}'>设置为缩略图</div>
 	<input type='hidden' name='attaUrl[]' value='{{ urlname }}' />
