remove unsupported layout type

--- a/app/application/layout-scripts/admin-toolbar.phtml
+++ b/app/application/layout-scripts/admin-toolbar.phtml
@@ -18,10 +18,10 @@ $userLayoutDocs = $co->addFilter('default', 0)
 						<option value='/list.shtml' layoutId='default-list'>文章列表</option>
 						<option value='/product.shtml' layoutId='default-product'>产品详情</option>
 						<option value='/product-list.shtml' layoutId='default-product-list'>产品列表</option>
-						<option value='/user/index/' layoutId='user-index'>用户管理</option>
+						<!-- option value='/user/index/' layoutId='user-index'>用户管理</option>
 						<option value='/shop/index/' layoutId='shop-index'>购物车</option>
 						<option value='/shop/order/' layoutId=shop-order'>订单页面</option>
-						<option value='/shop/payment-gateway/' layoutId='shop-payment-gateway'>支付页面</option>
+						<option value='/shop/payment-gateway/' layoutId='shop-payment-gateway'>支付页面</option -->
 					</optgroup>
 					<optgroup label='自定义页面'>
 					<?php foreach($userLayoutDocs as $doc) {?>
